--- a/src/views/index.html
+++ b/src/views/index.html
@@ -40,8 +40,10 @@
                 <div class="main-text">
                     <h1 class="title">Здоровая еда - <br><span> это просто</span>!</h1>
                     <div class="ml">
-                        <p class="main-text__description">Сеть магазинов полезных продуктов питания, производство
-                            которых основано на&nbsp;принципах и&nbsp;стандартах органического чистых продуктов</p>
+                        <p class="main-text__description">Сеть магазинов полезных продуктов питания,
+                            производство которых основано
+                            на&nbsp;принципах и&nbsp;стандартах органического чистых
+                            продуктов</p>
                         <a class="btn" href="">Перейти в каталог</a>
                     </div>
                 </div>
@@ -61,11 +63,11 @@
                 </div>
             </div>
         </div>
-        <img class="section-main__image section-main__tomato" src="../img/tomato.png" alt="Tomato">
-        <img class="section-main__image section-main__avocado" src="../img/avocado.png" alt="Avocado">
-        <img class="section-main__image section-main__cucumber" src="../img/cucumber.png" alt="Cucumber">
-        <img class="section-main__image section-main__pepper" src="../img/pepper.png" alt="Pepper">
-        <img class="section-main__image section-main__beans" src="../img/beans.png" alt="Beans">
+        <img class="section-main__image section-main__tomato" src="../img/tomato.png" alt="">
+        <img class="section-main__image section-main__avocado" src="../img/avocado.png" alt="">
+        <img class="section-main__image section-main__cucumber" src="../img/cucumber.png" alt="">
+        <img class="section-main__image section-main__pepper" src="../img/pepper.png" alt="">
+        <img class="section-main__image section-main__beans" src="../img/beans.png" alt="">
     </section>
     <section class="section-stock">
         <div class="wrapper">
@@ -110,21 +112,19 @@
                     </div>
                 </div>
                 <div class="slider-child">
-                    <div class="slider-child">
-                        <div class="slider-item slider-milk">
-                            <div class="slider-text">
-                                <h3 class="slider-text__title">Молочные<br>продукты</h3>
-                                <p class="slider-text__description">В наши дни появилась мода на здоровое питание, поэтому
-                                    на
-                                    рынке питания разработали органическое молоко. Органическое молоко является продуктом
-                                    огранического животнодства</p>
-                                <a class="slider-text__link" href="">Подробнее</a>
-                            </div>
+                    <div class="slider-item slider-hover slider-milk">
+                        <div class="slider-text">
+                            <h3 class="slider-text__title">Молочные<br>продукты</h3>
+                            <p class="slider-text__description">В наши дни появилась мода на здоровое питание, поэтому
+                                на
+                                рынке питания разработали органическое молоко. Органическое молоко является продуктом
+                                огранического животнодства</p>
+                            <a class="slider-text__link" href="">Подробнее</a>
                         </div>
                     </div>
                 </div>
                 <div class="slider-child">
-                    <div class="slider-item slider-coils">
+                    <div class="slider-item slider-hover slider-coils">
                         <div class="slider-text">
                             <h3 class="slider-text__title">Бакалея</h3>
                             <p class="slider-text__description">В наши дни появилась мода на здоровое питание, поэтому
@@ -136,7 +136,7 @@
                     </div>
                 </div>
                 <div class="slider-child">
-                    <div class="slider-item slider-steaks">
+                    <div class="slider-item slider-hover slider-steaks">
                         <div class="slider-text">
                             <h3 class="slider-text__title"> Мясо, птица</h3>
                             <p class="slider-text__description">В наши дни появилась мода на здоровое питание, поэтому
@@ -179,11 +179,11 @@
                 <div class="slider-child">
                     <div class="slider-item">
                         <div class="slider-thumb">
-                            <img class="slider-thumb__image" src="../img/milk2.png" alt="Milk">
+                            <img class="slider-thumb__image" src="../img/milk2.png" alt="">
                         </div>
                         <div class="slider-info">
                             <h3 class="slider-info__title">Молоко топленое</h3>
-                            <p class="slider-info__description">Молоко Healthy food топленое<br>мдж &nbsp;4%&nbsp;500гр
+                            <p class="slider-info__description">Молоко Healthy food топленое<br> мдж &nbsp;4%&nbsp;500гр
                             </p>
                             <p class="slider-info__price">159 руб/шт</p>
                             <div class="slider-footer">
@@ -200,7 +200,7 @@
                 <div class="slider-child">
                     <div class="slider-item">
                         <div class="slider-thumb">
-                            <img class="slider-thumb__image" src="../img/egg.png" alt="Egg">
+                            <img class="slider-thumb__image" src="../img/egg.png" alt="">
                         </div>
                         <div class="slider-info">
                             <h3 class="slider-info__title">Яйцо перепелийное</h3>
@@ -221,11 +221,11 @@
                     <div class="slider-item">
                         <div class="slider-info">
                             <div class="slider-thumb">
-                                <img class="slider-thumb__image" src="../img/chicken.png" alt="Chicken">
+                                <img class="slider-thumb__image" src="../img/chicken.png" alt="">
                             </div>
                             <h3 class="slider-info__title">Куриное филе Оссобуко</h3>
                             <p class="slider-info__description">Куриное филе Оссобуко (Ангус) охл скин. В&nbsp;вакумной
-                                упаоквке</p>
+                                упаковке</p>
                             <p class="slider-info__price">300 руб/упак</p>
                             <div class="slider-footer">
                                 <div class="slider-count">
@@ -240,8 +240,169 @@
                 </div>
             </div>
         </div>
-
     </section>
+    <section class="section-catalog">
+        <div class="wrapper">
+            <h2 class="title">Каталог</h2>
+            <p class="section-catalog__text">Еда которая заботится о вашей фигуре</p>
+            <ul class="tub">
+                <li class="tub-item"><a class="tub-link" href="">Молочные продукты</a></li>
+                <li class="tub-item"><a class="tub-link" href="">Бакалея</a></li>
+                <li class="tub-item"><a class="tub-link" href="">Мясо, птица</a></li>
+                <li class="tub-item"><a class="tub-link" href="">Детям</a></li>
+                <li class="tub-item"><a class="tub-link" href="">Овощи и фрукты</a></li>
+            </ul>
+            <div class="catalog">
+                <div class="catalog-item">
+                    <div class="catalog-info">
+                        <div class="catalog-thumb">
+                            <img class="catalog-thumb__image" src="../img/milk.png" alt="">
+                        </div>
+                        <h3 class="catalog-info__title">Молоко топленое </h3>
+                        <p class="catalog-info__description">Молоко Healthy food топленое мдж &nbsp;4%&nbsp;500гр</p>
+                        <p class="catalog-info__price">159 руб/шт</p>
+                        <div class="catalog-footer">
+                            <div class="catalog-count">
+                                <span class="catalog-count__minus"></span>
+                                <input class="catalog-count__number" type="text" value="1" />
+                                <span class="catalog-count__plus"></span>
+                            </div>
+                            <button class="btn catalog-footer__btn">в корзину</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-info">
+                        <div class="catalog-thumb">
+                            <img class="catalog-thumb__image" src="../img/iogurt.png" alt="">
+                        </div>
+                        <h3 class="catalog-info__title">Йогурт с черникой</h3>
+                        <p class="catalog-info__description">Йогурт Healthy food с черникой<br>питьевой 1.5% 700гр</p>
+                        <p class="catalog-info__price">89 руб/шт</p>
+                        <div class="catalog-footer">
+                            <div class="catalog-count">
+                                <span class="catalog-count__minus"></span>
+                                <input class="catalog-count__number" type="text" value="1" />
+                                <span class="catalog-count__plus"></span>
+                            </div>
+                            <button class="btn catalog-footer__btn">в корзину</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-info">
+                        <div class="catalog-thumb">
+                            <img class="catalog-thumb__image" src="../img/tvor.png" alt="">
+                        </div>
+                        <h3 class="catalog-info__title">Творог</h3>
+                        <p class="catalog-info__description">Творог Healthy food Рассыпчатый мдж<br> 9% 350гр</p>
+                        <p class="catalog-info__price">216 руб/шт</p>
+                        <div class="catalog-footer">
+                            <div class="catalog-count">
+                                <span class="catalog-count__minus"></span>
+                                <input class="catalog-count__number" type="text" value="1" />
+                                <span class="catalog-count__plus"></span>
+                            </div>
+                            <button class="btn catalog-footer__btn">в корзину</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-info">
+                        <div class="catalog-thumb">
+                            <img class="catalog-thumb__image" src="../img/mac.png" alt="">
+                        </div>
+                        <h3 class="catalog-info__title">Моцарелла</h3>
+                        <p class="catalog-info__description">Моцарелла Healthy food 45% 0.125кг</p>
+                        <p class="catalog-info__price">359 руб/шт</p>
+                        <div class="catalog-footer">
+                            <div class="catalog-count">
+                                <span class="catalog-count__minus"></span>
+                                <input class="catalog-count__number" type="text" value="1" />
+                                <span class="catalog-count__plus"></span>
+                            </div>
+                            <button class="btn catalog-footer__btn">в корзину</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-info">
+                        <div class="catalog-thumb">
+                            <img class="catalog-thumb__image" src="../img/maslo.png" alt="">
+                        </div>
+                        <h3 class="catalog-info__title">Масло сливочное </h3>
+                        <p class="catalog-info__description">Масло Healthy food сливочное<br>82.5% 200гр</p>
+                        <p class="catalog-info__price">139 руб/шт</p>
+                        <div class="catalog-footer">
+                            <div class="catalog-count">
+                                <span class="catalog-count__minus"></span>
+                                <input class="catalog-count__number" type="text" value="1" />
+                                <span class="catalog-count__plus"></span>
+                            </div>
+                            <button class="btn catalog-footer__btn">в корзину</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-info">
+                        <div class="catalog-thumb">
+                            <img class="catalog-thumb__image" src="../img/kirillter.png" alt="">
+                        </div>
+                        <h3 class="catalog-info__title">Йогурт термостатный</h3>
+                        <p class="catalog-info__description">Йогурт Healthy food термостатный с<br> фруктово-ягодным
+                            2.5% 165гр</p>
+                        <p class="catalog-info__price">159 руб/шт</p>
+                        <div class="catalog-footer">
+                            <div class="catalog-count">
+                                <span class="catalog-count__minus"></span>
+                                <input class="catalog-count__number" type="text" value="1" />
+                                <span class="catalog-count__plus"></span>
+                            </div>
+                            <button class="btn catalog-footer__btn">в корзину</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-info">
+                        <div class="catalog-thumb">
+                            <img class="catalog-thumb__image" src="../img/chesse.png" alt="">
+                        </div>
+                        <h3 class="catalog-info__title">Сыр</h3>
+                        <p class="catalog-info__description">Сыр Healthy food Сливочный<br>45% 200гр</p>
+                        <p class="catalog-info__price">559 руб/шт</p>
+                        <div class="catalog-footer">
+                            <div class="catalog-count">
+                                <span class="catalog-count__minus"></span>
+                                <input class="catalog-count__number" type="text" value="1" />
+                                <span class="catalog-count__plus"></span>
+                            </div>
+                            <button class="btn catalog-footer__btn">в корзину</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-info">
+                        <div class="catalog-thumb">
+                            <img class="catalog-thumb__image" src="../img/sous.png" alt="">
+                        </div>
+                        <h3 class="catalog-info__title">Соус для салата </h3>
+                        <p class="catalog-info__description">Соус для салата Healthy food пикантный 4% 70гр</p>
+                        <p class="catalog-info__price">59 руб/шт</p>
+                        <div class="catalog-footer">
+                            <div class="catalog-count">
+                                <span class="catalog-count__minus"></span>
+                                <input class="catalog-count__number" type="text" value="1" />
+                                <span class="catalog-count__plus"></span>
+                            </div>
+                            <button class="btn catalog-footer__btn">в корзину</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="btn-load">Загрузить еще</button>
+        </div>
+    </section>
+
     <footer>
     </footer>
     @@include("../blocks/modules/footer/footer.html")
@@ -274,7 +435,7 @@
             ]
         });
         $(document).ready(function () {
-            $('.minus').click(function () {
+            $('.slider-count__minus').click(function () {
                 var $input = $(this).parent().find('input');
                 var count = parseInt($input.val()) - 1;
                 count = count < 1 ? 1 : count;
@@ -282,7 +443,23 @@
                 $input.change();
                 return false;
             });
-            $('.plus').click(function () {
+            $('.slider-count__plus').click(function () {
+                var $input = $(this).parent().find('input');
+                $input.val(parseInt($input.val()) + 1);
+                $input.change();
+                return false;
+            });
+        });
+        $(document).ready(function () {
+            $('.catalog-count__minus').click(function () {
+                var $input = $(this).parent().find('input');
+                var count = parseInt($input.val()) - 1;
+                count = count < 1 ? 1 : count;
+                $input.val(count);
+                $input.change();
+                return false;
+            });
+            $('.catalog-count__plus').click(function () {
                 var $input = $(this).parent().find('input');
                 $input.val(parseInt($input.val()) + 1);
                 $input.change();
